--- a/index/index.html
+++ b/index/index.html
@@ -27,7 +27,7 @@
         <!--Assignment #1-->
         <div>
             <div>
-                <img src="/images/tree.jpg" class="img-fluid img-thumbnail">
+                <img src="tree.jpg" class="img-fluid img-thumbnail">
             </div>
         </div>
         <!--Assignment #2-->
