--- a/index/index.html
+++ b/index/index.html
@@ -17,6 +17,7 @@
 
     <!--This will be the heading-->
     <div class="text-center">
+        <h1>test</h1>
         <h1>Levi Reyes</h1>
         <h3>APCV 498</h3>
         <p>TEXT</p>
