--- a/index/index.html
+++ b/index/index.html
@@ -45,11 +45,11 @@
     <div class="footer text-center mt-3">
         <h5>Get in contact with me</h5>
         <div id="icons">
-          <a href="https://www.instagram.com/elqueben/" target="_blank"><i class="fa fab fa-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/elqueben/" target="_blank"><i class="fa fab fa-linkedin"></i></a>
-          <a href="https://github.com/elqueben" target="_blank"><i class="fa fab fa-github"></i></a>
-          <a href="mailto:kewi.cardenas@gmail.com" target="_blank"><i class="fa far fa-envelope"></i></a>
-          <a href="tel:+19283049139" target="_blank"><i class="fa fas fa-phone"></i></a>
+          <a href="https://www.instagram.com/levi_reyes_8/" target="_blank"><i class="fa fab fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/levi-reyes-5328772b3/" target="_blank"><i class="fa fab fa-linkedin"></i></a>
+          <a href="https://github.com/LeviR-UofA" target="_blank"><i class="fa fab fa-github"></i></a>
+          <a href="mailto:levi8reyes23@arizona.edu" target="_blank"><i class="fa far fa-envelope"></i></a>
+          <a href="tel:+19282618775" target="_blank"><i class="fa fas fa-phone"></i></a>
         </div>
       </div>
     
