--- a/index/index.html
+++ b/index/index.html
@@ -33,7 +33,8 @@
             </div>-->
             <main>
                 <div class="image-container">
-                    <img src="image1.jpg" alt="Image 1">
+                    <a href="html/firstProject.html">
+                    <img src="image1.jpg" alt="Image 1" ></a>
                 </div>
                 <div class="image-container">
                     <img src="image2.jpg" alt="Image 2">
