--- a/index/index.html
+++ b/index/index.html
@@ -7,48 +7,62 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Portfolio</title>
+    <title>Levi Reyes - Portfolio</title>
 </head>
 <body>
-    <!--This will be the banner-->
-    <header>
-        <h1>Organized Accomplishments</h1>
-    </header>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <div class="container">
+            <h1 class="logo">Levi Reyes</h1>
+            <h2 class="middlelogo">Organized Accomplishments</h2>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
 
     <!--This will be the heading-->
     <div class="text-center">
-        <h1>Levi Reyes</h1>
         <h3>APCV 498</h3>
         <p>Welcome to my website!</p>
-        <p>Below is some projects that I have been able to create over my career in School & on my freetime.</p>
+        <p>Below are some projects that I have worked on during my Academic Career & free time.</p>
     </div>
 
     <!--This div will be for the assignments-->
     <div class="container">
-        <!--Assignment #1-->
-        <div>
-            <!--<div>
-                <img src="tree.jpg" class="img-fluid img-thumbnail">
-                <a href=""
-            </div>-->
-            <main>
-                <div class="image-container">
-                    <a href="html/firstProject.html">
-                    <img src="image1.jpg" alt="Image 1" ></a>
-                </div>
-                <div class="image-container">
-                    <img src="image2.jpg" alt="Image 2">
-                </div>
-                <div class="image-container">
-                    <img src="image3.jpg" alt="Image 3">
-                </div>
-            </main>
-            
-        </div>
+        <!-- Assignment #1 -->
+        <main>
+            <div class="image-container">
+                <a href="html/page1.html">
+                    <img src="Images/Image1.jpg" alt="Image 1">
+                    <div class="image-overlay">
+                        <p>Project 1 Description</p>
+                    </div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="html/page2.html">
+                    <img src="Images/Image2.jpg" alt="Image 2">
+                    <div class="image-overlay">
+                        <p>Project 2 Description</p>
+                    </div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="html/page3.html">
+                    <img src="Images/Image3.jpg" alt="Image 3">
+                    <div class="image-overlay">
+                        <p>Project 3 Description</p>
+                    </div>
+                </a>
+            </div>
+        </main>
     </div>
 
     <!--This will be the links to social media-->
-    <div class="footer text-center mt-3">
+    <div class="footer text-center mt-3" id="contact">
         <footer>
             <h5>Get in contact with me</h5>
             <div id="icons">
@@ -56,7 +70,8 @@
             <a href="https://www.linkedin.com/in/levi-reyes-5328772b3/" target="_blank"><i class="fa fab fa-linkedin"></i></a>
             <a href="https://github.com/LeviR-UofA" target="_blank"><i class="fa fab fa-github"></i></a>
             <a href="mailto:levi8reyes23@arizona.edu" target="_blank"><i class="fa far fa-envelope"></i></a>
-            <a href="tel:+19282618775" target="_blank"><i class="fa fas fa-phone"></i></a>
+            <!--<a href="tel:+19282618775" target="_blank"><i class="fa fas fa-phone"></i></a>-->
+            <a href="tel:+1928xxxxxxx" target="_blank"><i class="fa fas fa-phone"></i></a>
             </div>
         </footer>
         
@@ -82,5 +97,8 @@
             </ul>
         </div>-->
     </div>
+
+    <!--<script src="scripts.js"></script>-->
+
 </body>
 </html>
