Added more pictures to Mainpage

--- a/index/html/page1.html
+++ b/index/html/page1.html
@@ -59,9 +59,11 @@
         </pre>
     </div>
 
-    <div>
+    <div class="footer text-center mt-3">
         <footer>
-            <a href="../index.html">Back to Main Page!</a>
+            <div>
+                <a href="../index.html">Back to Main Page!</a>
+            </div>
         </footer>
         
     </div>
