Added 5 pictures to MainPage & more

--- a/index/index.html
+++ b/index/index.html
@@ -37,7 +37,7 @@
             <!--Start of First Row of Pictures-->
             <div class="image-container">
                 <a href="html/page1.html">
-                    <img src="Images/Image1.jpg" alt="Image 1">
+                    <img src="Images/Image1.png" alt="Image 1">
                     <div class="image-overlay">
                         <p>Project 1 Description</p>
                     </div>
