Added Web Development Section to Mainpage

--- a/index/index.html
+++ b/index/index.html
@@ -77,8 +77,37 @@
                     </div>
                 </a>
             </div>
-            
+
         </main>
+
+        <div>
+            <h4>Web Development Projects</h4>
+            <p>Here are some projects that I did using HTML, CSS, & JavaScript. This section has working projects I have deployed online, just click the image of the project your interested in testing.</p>
+        
+            <main>
+                <!--Picture for Vigenere Cipher-->
+                <div class="image-container">
+                    <a href="https://vigenere-cipher-five.vercel.app/" target="_blank">
+                        <img src="Images/VigenereCipher.JPG" alt="Image 1">
+                        <div class="image-overlay">
+                            <p>Vigenere Cipher</p>
+                        </div>
+                    </a>
+                </div>
+
+                <!--Picture for Simple Calculator App-->
+                <div class="image-container">
+                    <a href="https://simple-calculator-chi-ivory.vercel.app/" target="_blank">
+                        <img src="Images/SimpleCalculator.JPG" alt="Image 1">
+                        <div class="image-overlay">
+                            <p>Simple Calculator</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            </main>            
+        </div>
     </div>
 
     <!--This will be the links to social media-->
