--- a/index/index.html
+++ b/index/index.html
@@ -82,29 +82,47 @@
 
         <div>
             <h4>Web Development Projects</h4>
-            <p>Here are some projects that I did using HTML, CSS, & JavaScript. This section has working projects I have deployed online, just click the image of the project your interested in testing.</p>
+            <p>Here are some projects that I did using HTML, CSS, & JavaScript. This section has working projects I have deployed online, just click the image of the project your interested in seeing more.</p>
         
             <main>
+            <!--First Row of Pictures-->
+                <!--Picture for Lemon Recipe Website-->
+                <div class="image-container">
+                    <a href="https://lemon-pie-recipe.vercel.app/" target="_blank">
+                        <img src="Images/LemonPie.JPG" alt="LemonPieImage">
+                        <div class="image-overlay">
+                            <p>Lemon Recipe Homepage</p>
+                        </div>
+                    </a>
+                </div>
+                <!--Picture for TMNT Rancid Tomatoes Page-->
+                <div class="image-container">
+                    <a href="https://tmnt-rancid-tomatoes.vercel.app/" target="_blank">
+                        <img src="Images/TMNTPage.JPG" alt="TMNTImage">
+                        <div class="image-overlay">
+                            <p>TMNT Rancid Tomatoes Page</p>
+                        </div>
+                    </a>
+                </div>
                 <!--Picture for Vigenere Cipher-->
                 <div class="image-container">
                     <a href="https://vigenere-cipher-five.vercel.app/" target="_blank">
-                        <img src="Images/VigenereCipher.JPG" alt="Image 1">
+                        <img src="Images/VigenereCipher.JPG" alt="CipherImage">
                         <div class="image-overlay">
                             <p>Vigenere Cipher</p>
                         </div>
                     </a>
                 </div>
-
+            <!--Second Row of Pictures-->
                 <!--Picture for Simple Calculator App-->
                 <div class="image-container">
                     <a href="https://simple-calculator-chi-ivory.vercel.app/" target="_blank">
-                        <img src="Images/SimpleCalculator.JPG" alt="Image 1">
+                        <img src="Images/SimpleCalculator.JPG" alt="CalculatorImage">
                         <div class="image-overlay">
                             <p>Simple Calculator</p>
                         </div>
                     </a>
                 </div>
-            </div>
 
             </main>            
         </div>
