--- a/index/index.html
+++ b/index/index.html
@@ -13,6 +13,8 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="container">
+            <img src="Images/UALogo.png" alt="UofA Logo" class="icon">
+
             <h1 class="logo">Levi Reyes</h1>
             <h2 class="middlelogo">Organized Accomplishments</h2>
             <ul class="nav-links">
