Added more to Landing Page

--- a/index/index.html
+++ b/index/index.html
@@ -36,149 +36,194 @@
                             <li><a href="#certificates">Certificates</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
-
-                        <!-- <a href="#main-section" class="landing-Page-Link">
-                            <div class="solid-Button-Container">
-                                <button class="solid-button-button button Button">
-                                    <span>Explore places</span></button>
-                            </div>
-                        </a> -->
                     </div>
                 </div>
             </nav>
 
+            <!--Section for BackgroundImage & Text-->
             <div class="landing-Page-Hero">
-                <div class="landing-page-content-container">
-                    <h1 class="Heading landing-page-text09">Welcome!</h1>
-                    <h2 class="Subheading landing-page-subheading">This is the Landing Page</h2>
-                    <span class="landing-page-text10">
+                <div class="landing-Page-Content-Container">
+                    <h1 class="Heading landing-Page-Text09">Welcome!</h1>
+                    <h2 class="Subheading landing-Page-Subheading">This is the Landing Page</h2>
+                    <span class="landing-Page-Text10">
                         <span>Here you will find all my career Accomplishments </span><br />
                         <span>I Hope You Enjoy it & thanks for the visit</span><br />
                         <span>Click the button to start exploring the Page</span>
                     </span>
-                    <div class="solid-button-container">
-                        <button class="solid-button-button button Button">
-                            <span>Start Exploring Projects</span></button>
-                    </div>
+                    <a href="#web-Projects-Section" class="landing-page-link01">
+                        <div class="solid-button-container">
+                            <button class="solid-button-button button Button">
+                                <span>Start Exploring Projects</span></button>
+                        </div>
+                    </a>
+                    
                 </div>
             </div>
         </div>
 
-        <!--Start of Main Body-->
-        <div class="text-body">
-            <p>Below are some projects that I have worked on during my Academic Career & free time.</p>
-        </div>
-        <p>Here is some Work I did for CLass</p>
-        <!-- Assignment #1 -->
         <main>
-            <!--Start of First Row of Pictures-->
-            <div class="image-container">
-                <a href="html/page1.html">
-                    <img src="Images/Image1.png" alt="Image 1">
-                    <div class="image-overlay">
-                        <p>Project 1 Description</p>
-                    </div>
-                </a>
-            </div>
-            <div class="image-container">
-                <a href="html/page2.html">
-                    <img src="Images/Image2.jpg" alt="Image 2">
-                    <div class="image-overlay">
-                        <p>Project 2 Description</p>
-                    </div>
-                </a>
-            </div>
-            <div class="image-container">
-                <a href="html/page3.html">
-                    <img src="Images/Image3.jpg" alt="Image 3">
-                    <div class="image-overlay">
-                        <p>Project 3 Description</p>
-                    </div>
-                </a>
-            </div>
-
-            <!--Start of Second Row of Pictures-->
-            <div class="image-container">
-                <a href="html/page4.html">
-                    <img src="Images/Image4.jpg" alt="Image 4">
-                    <div class="image-overlay">
-                        <p>Project 4 Description</p>
-                    </div>
-                </a>
-            </div>
-            <div class="image-container">
-                <a href="html/page5.html">
-                    <img src="Images/Image5.jpg" alt="Image 5">
-                    <div class="image-overlay">
-                        <p>Project 5 Description</p>
-                    </div>
-                </a>
-            </div>
-
-        </main>
-
-        <div>
-            <div class="text-center">
+            <div id="web-Projects-Section" class="landing-page-main">
+                <!--Web Development Projects-->
                 <h4>Web Development Projects</h4>
+                <span class="landing-page-text15">Here are some projects that I did using HTML, CSS, & JavaScript. This
+                    section has working
+                    projects I have deployed online, just click the image of the project your interested in seeing
+                    more.</span>
+                <div class="landing-page-cards-container">
+                    <!--Lemon Recipe Website-->
+                    <div class="place-card-container">
+                        <img alt="LemonPieImage" src="Images/LemonPie.JPG" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>Lemon Pie Recipe Page</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>This project was to create a webpage for Grandma's Lemon Meringue Pie Recipe,
+                                    It includes the whole recipe & MainPage.</span>
+                            </span>
+                            <a href="https://lemon-pie-recipe.vercel.app/" class="landing-page-link01" target="_blank">
+                                <div class="solid-button-container">
+                                    <button class="outline-button-button button Button">
+                                        <span>Discover project</span></button>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--Picture for TMNT Rancid Tomatoes Page-->
+                    <div class="place-card-container">
+                        <img alt="TMNTImage" src="Images/TMNTPage.JPG" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>TMNT Rancid Tomatoes Page</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>This project was to create a Rancid Tomatoes Page that shows of all
+                                    the Movie details about the TMNT movie. Styling was done using CSS.</span>
+                            </span>
+                            <a href="https://tmnt-rancid-tomatoes.vercel.app/" class="landing-page-link01"
+                                target="_blank">
+                                <div class="solid-button-container">
+                                    <button class="outline-button-button button Button">
+                                        <span>Discover project</span></button>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--Picture for Vigenere Cipher-->
+                    <div class="place-card-container">
+                        <img alt="CipherImage" src="Images/VigenereCipher.JPG" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>Vigenere Cipher</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>This project was creating a Vigenere Cipher that allows the User to
+                                    encrypt/decrypt
+                                    their message. The tests on the right side of page are to make sure the Cipher
+                                    works.</span>
+                            </span>
+                            <a href="https://vigenere-cipher-five.vercel.app/" class="landing-page-link01"
+                                target="_blank">
+                                <div class="solid-button-container">
+                                    <button class="outline-button-button button Button">
+                                        <span>Discover project</span></button>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--Picture for Simple Calculator App-->
+                    <div class="place-card-container">
+                        <img alt="CalculatorImage" src="Images/SimpleCalculator.JPG" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>Simple Calculator</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>This Simple Calculator can do the 4 main operators, & decimal values.
+                                    It was a quick project that uses JavaScript for calculations.</span>
+                            </span>
+                            <a href="https://simple-calculator-chi-ivory.vercel.app/" class="landing-page-link01"
+                                target="_blank">
+                                <div class="solid-button-container">
+                                    <button class="outline-button-button button Button">
+                                        <span>Discover project</span></button>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <p>Here are some projects that I did using HTML, CSS, & JavaScript. This section has working projects I have
-                deployed online, just click the image of the project your interested in seeing more.</p>
-
-            <main>
-                <!--First Row of Web Development Projects-->
-                <!--Picture for Lemon Recipe Website-->
-                <div class="image-container">
-                    <a href="https://lemon-pie-recipe.vercel.app/" target="_blank">
-                        <img src="Images/LemonPie.JPG" alt="LemonPieImage">
-                        <div class="image-overlay">
-                            <p>Lemon Recipe Homepage</p>
-                        </div>
-                    </a>
-                    <p>This project was to create a webpage for Grandma's Lemon Meringue Pie Recipe, It includes the
-                        whole recipe & a MainPage.</p>
-                </div>
-                <!--Picture for TMNT Rancid Tomatoes Page-->
-                <div class="image-container">
-                    <a href="https://tmnt-rancid-tomatoes.vercel.app/" target="_blank">
-                        <img src="Images/TMNTPage.JPG" alt="TMNTImage">
-                        <div class="image-overlay">
-                            <p>TMNT Rancid Tomatoes Page</p>
-                        </div>
-                    </a>
-                    <p>This project was to create a Rancid Tomatoes Page that shows of all the Movie details about the
-                        TMNT movie. Styling was done using CSS</p>
-                </div>
-                <!--Picture for Vigenere Cipher-->
-                <div class="image-container">
-                    <a href="https://vigenere-cipher-five.vercel.app/" target="_blank">
-                        <img src="Images/VigenereCipher.JPG" alt="CipherImage">
-                        <div class="image-overlay">
-                            <p>Vigenere Cipher</p>
-                        </div>
-                    </a>
-                    <p>This project was creating a Vigenere Cipher that allows the User to encrypt/decrypt their
-                        message. The tests on the right side of page are to make sure the Cipher works.</p>
-                </div>
-                <!--Second Row of Web Development Projects-->
-                <!--Picture for Simple Calculator App-->
-                <div class="image-container">
-                    <a href="https://simple-calculator-chi-ivory.vercel.app/" target="_blank">
-                        <img src="Images/SimpleCalculator.JPG" alt="CalculatorImage">
-                        <div class="image-overlay">
-                            <p>Simple Calculator</p>
-                        </div>
-                    </a>
-                    <p>This Simple Calculator can do the 4 main operators, & decimal values. It was a quick project that
-                        uses JavaScript for calculations.</p>
-                </div>
-
-            </main>
-
+        </main>
     </div>
 
 
 
-<!-- 
+
+
+
+
+
+    <!--Start of Main Body-->
+    <div class="text-body">
+        <p>Below are some projects that I have worked on during my Academic Career & free time.</p>
+    </div>
+    <p>Here is some Work I did for CLass</p>
+    <!-- Assignment #1 -->
+    <main>
+        <!--Start of First Row of Pictures-->
+        <div class="image-container">
+            <a href="html/page1.html">
+                <img src="Images/Image1.png" alt="Image 1">
+                <div class="image-overlay">
+                    <p>Project 1 Description</p>
+                </div>
+            </a>
+        </div>
+        <div class="image-container">
+            <a href="html/page2.html">
+                <img src="Images/Image2.jpg" alt="Image 2">
+                <div class="image-overlay">
+                    <p>Project 2 Description</p>
+                </div>
+            </a>
+        </div>
+        <div class="image-container">
+            <a href="html/page3.html">
+                <img src="Images/Image3.jpg" alt="Image 3">
+                <div class="image-overlay">
+                    <p>Project 3 Description</p>
+                </div>
+            </a>
+        </div>
+
+        <!--Start of Second Row of Pictures-->
+        <div class="image-container">
+            <a href="html/page4.html">
+                <img src="Images/Image4.jpg" alt="Image 4">
+                <div class="image-overlay">
+                    <p>Project 4 Description</p>
+                </div>
+            </a>
+        </div>
+        <div class="image-container">
+            <a href="html/page5.html">
+                <img src="Images/Image5.jpg" alt="Image 5">
+                <div class="image-overlay">
+                    <p>Project 5 Description</p>
+                </div>
+            </a>
+        </div>
+
+    </main>
+
+
+
+
+
+    <!-- 
     container for the whole Mainpage
     <div class="container-xl">
         This will be the heading
@@ -188,61 +233,61 @@
 
     -->
 
-        
-        </div>
 
-        <div id="certificates">
-            <div class="text-center">
-                <h3>Certificates:</h3>
+    </div>
+
+    <div id="certificates">
+        <div class="text-center">
+            <h3>Certificates:</h3>
+        </div>
+        <p>This Section is For Certificates Awarded to me.</p>
+
+        <main>
+            <!--First Row of Web Development Projects-->
+            <!--1st Certification-->
+            <div class="image-container">
+                <!--<a href="https://lemon-pie-recipe.vercel.app/" target="_blank">-->
+                <img src="Images/AccentureCert.JPG" alt="AccentureCertImage">
+                <div class="image-overlay">
+                    <p>Accenture Certificate</p>
+                </div>
+                </a>
             </div>
-            <p>This Section is For Certificates Awarded to me.</p>
-
-            <main>
-                <!--First Row of Web Development Projects-->
-                <!--1st Certification-->
-                <div class="image-container">
-                    <!--<a href="https://lemon-pie-recipe.vercel.app/" target="_blank">-->
-                    <img src="Images/AccentureCert.JPG" alt="AccentureCertImage">
-                    <div class="image-overlay">
-                        <p>Accenture Certificate</p>
-                    </div>
-                    </a>
+            <!--2nd Certification-->
+            <div class="image-container">
+                <!--<a href="https://tmnt-rancid-tomatoes.vercel.app/" target="_blank">-->
+                <img src="Images/GoldmanSachsCert.JPG" alt="TMNTImage">
+                <div class="image-overlay">
+                    <p>GoldmanSachs Certificate</p>
                 </div>
-                <!--2nd Certification-->
-                <div class="image-container">
-                    <!--<a href="https://tmnt-rancid-tomatoes.vercel.app/" target="_blank">-->
-                    <img src="Images/GoldmanSachsCert.JPG" alt="TMNTImage">
-                    <div class="image-overlay">
-                        <p>GoldmanSachs Certificate</p>
-                    </div>
-                    <!--</a>-->
+                <!--</a>-->
+            </div>
+            <!--3rd Certification-->
+            <div class="image-container">
+                <!--<a href="https://vigenere-cipher-five.vercel.app/" target="_blank">-->
+                <img src="Images/TataCert.JPG" alt="CipherImage">
+                <div class="image-overlay">
+                    <p>Tata Certificate</p>
                 </div>
-                <!--3rd Certification-->
-                <div class="image-container">
-                    <!--<a href="https://vigenere-cipher-five.vercel.app/" target="_blank">-->
-                    <img src="Images/TataCert.JPG" alt="CipherImage">
-                    <div class="image-overlay">
-                        <p>Tata Certificate</p>
-                    </div>
-                    </a>
+                </a>
+            </div>
+
+            <!--First Certificate-->
+            <div class="image-container">
+                <!--<a href="https://lemon-pie-recipe.vercel.app/" target="_blank">-->
+                <img src="Images/UAForageCert.JPG" alt="UAForageCert">
+                <div class="image-overlay">
+                    <p>UA Forage 15 Hour Cert</p>
                 </div>
-
-                <!--First Certificate-->
-                <div class="image-container">
-                    <!--<a href="https://lemon-pie-recipe.vercel.app/" target="_blank">-->
-                    <img src="Images/UAForageCert.JPG" alt="UAForageCert">
-                    <div class="image-overlay">
-                        <p>UA Forage 15 Hour Cert</p>
-                    </div>
-                    </a>
-                    <p>This was a 15 Hour Certificate awarded to me by UA for completing the previous 3 Forage
-                        certificates.</p>
-                </div>
-                <!--Second Certificate-->
+                </a>
+                <p>This was a 15 Hour Certificate awarded to me by UA for completing the previous 3 Forage
+                    certificates.</p>
+            </div>
+            <!--Second Certificate-->
 
 
 
-        </div>
+    </div>
     </div>
 
     <!--This will be the links to social media-->
