Edited CSS styling

--- a/index/index.html
+++ b/index/index.html
@@ -52,7 +52,7 @@
                     </span>
                     <a href="#web-Projects-Section" class="landing-page-link01">
                         <div class="solid-button-container">
-                            <button class="solid-button-button button Button">
+                            <button class="solid-button-button">
                                 <span>Start Exploring Projects</span></button>
                         </div>
                     </a>
