Made more improvements to MainPage

--- a/index/index.html
+++ b/index/index.html
@@ -20,7 +20,7 @@
     <!--Main Container for Homepage-->
     <div class="landing-Page-Container">
         <!--Second Container for Top-->
-        <div class="landing-Page-Top-Container">
+        <div class="landing-Page-Top-Container" id="home">
             <!--Navbar-->
             <nav data-role="Header" class="landing-Page-Navbar">
                 <!--Add Items to Navbar-->
@@ -56,7 +56,7 @@
                                 <span>Start Exploring Projects</span></button>
                         </div>
                     </a>
-                    
+
                 </div>
             </div>
         </div>
@@ -67,8 +67,7 @@
                 <h4>Web Development Projects</h4>
                 <span class="landing-page-text15">Here are some projects that I did using HTML, CSS, & JavaScript. This
                     section has working
-                    projects I have deployed online, just click the image of the project your interested in seeing
-                    more.</span>
+                    projects I have deployed online, just click the button to launch the project.</span>
                 <div class="landing-page-cards-container">
                     <!--Lemon Recipe Website-->
                     <div class="place-card-container">
@@ -157,84 +156,181 @@
                 </div>
             </div>
         </main>
-    </div>
 
+        <main>
+            <!--<div class="projects">-->
+            <div id="projects-Section" class="landing-page-main">
+                <!--Web Development Projects-->
+                <h4>More Projects</h4>
+                <span class="landing-page-text15">Here are things I have done so far. Programming Languages</span>
+                <div class="landing-page-cards-container">
+                    <!--Java Section-->
+                    <div class="place-card-container">
+                        <img alt="JavaImage" src="Images/Image1.png" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>Java</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>Java was my first introduction to anything programming & was what got me into
+                                    Software Development.
+                                    I was able to create some great basic projects but more importantly I learned key
+                                    concepts that I would use for other languages.</span>
+                            </span>
+                            <!--
+                                <a href="https://lemon-pie-recipe.vercel.app/" class="landing-page-link01" target="_blank">
+                                    <div class="solid-button-container">
+                                        <button class="outline-button-button button Button">
+                                            <span>Discover project</span></button>
+                                    </div>
+                                </a>-->
+                        </div>
+                    </div>
 
+                    <!--Python Section-->
+                    <div class="place-card-container">
+                        <img alt="PythonImage" src="Images/Image2.jpg" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>Python</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>Python...</span>
+                            </span>
+                        </div>
+                    </div>
 
+                    <!--C++ Section-->
+                    <div class="place-card-container">
+                        <img alt="C++Image" src="Images/Image3.jpg" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>C++</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>C++...</span>
+                            </span>
+                        </div>
+                    </div>
 
+                    <!--C Section-->
+                    <div class="place-card-container">
+                        <img alt="CImage" src="Images/Image4.jpg" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>C</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>C...</span>
+                            </span>
+                        </div>
+                    </div>
 
+                    <!--Android Studio Section-->
+                    <div class="place-card-container">
+                        <img alt="KotlinImage" src="Images/Image5.jpg" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>Kotlin</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>Kotlin using Android Studio...</span>
+                            </span>
+                        </div>
+                    </div>
 
-
-
-    <!--Start of Main Body-->
-    <div class="text-body">
-        <p>Below are some projects that I have worked on during my Academic Career & free time.</p>
-    </div>
-    <p>Here is some Work I did for CLass</p>
-    <!-- Assignment #1 -->
-    <main>
-        <!--Start of First Row of Pictures-->
-        <div class="image-container">
-            <a href="html/page1.html">
-                <img src="Images/Image1.png" alt="Image 1">
-                <div class="image-overlay">
-                    <p>Project 1 Description</p>
                 </div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="html/page2.html">
-                <img src="Images/Image2.jpg" alt="Image 2">
-                <div class="image-overlay">
-                    <p>Project 2 Description</p>
+            </div>
+        </main>
+
+        <!--
+        <main>
+            <div id="certificates-Section" class="landing-page-main">
+                Certificates Section
+                <h4>Certificates</h4>
+                <span class="landing-page-text15"></span>
+                <div class="landing-page-cards-container">
+                    1st Cert Section
+                    <div class="place-card-container">
+                        <img alt="JavaImage" src="Images/AccentureCert.JPG" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>Java</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>Java was my first introduction to anything programming & was what got me into
+                                    Software Development.
+                                    I was able to create some great basic projects but more importantly I learned key
+                                    concepts that I would use for other languages.</span>
+                            </span>
+                            <!-
+                                <a href="https://lemon-pie-recipe.vercel.app/" class="landing-page-link01" target="_blank">
+                                    <div class="solid-button-container">
+                                        <button class="outline-button-button button Button">
+                                            <span>Discover project</span></button>
+                                    </div>
+                                </a>->
+                        </div>
+                    </div>
+
+                    <!-Python Section->
+                    <div class="place-card-container">
+                        <img alt="PythonImage" src="Images/Image2.jpg" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>Python</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>Python...</span>
+                            </span>
+                        </div>
+                    </div>
+
+                    <!-C++ Section->
+                    <div class="place-card-container">
+                        <img alt="C++Image" src="Images/Image3.jpg" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>C++</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>C++...</span>
+                            </span>
+                        </div>
+                    </div>
+
+                    <!-C Section->
+                    <div class="place-card-container">
+                        <img alt="CImage" src="Images/Image4.jpg" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>C</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>C...</span>
+                            </span>
+                        </div>
+                    </div>
+
+                    <!-Android Studio Section->
+                    <div class="place-card-container">
+                        <img alt="KotlinImage" src="Images/Image5.jpg" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>Kotlin</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>Kotlin using Android Studio...</span>
+                            </span>
+                        </div>
+                    </div>
+
                 </div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="html/page3.html">
-                <img src="Images/Image3.jpg" alt="Image 3">
-                <div class="image-overlay">
-                    <p>Project 3 Description</p>
-                </div>
-            </a>
-        </div>
-
-        <!--Start of Second Row of Pictures-->
-        <div class="image-container">
-            <a href="html/page4.html">
-                <img src="Images/Image4.jpg" alt="Image 4">
-                <div class="image-overlay">
-                    <p>Project 4 Description</p>
-                </div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="html/page5.html">
-                <img src="Images/Image5.jpg" alt="Image 5">
-                <div class="image-overlay">
-                    <p>Project 5 Description</p>
-                </div>
-            </a>
-        </div>
-
-    </main>
-
-
-
-
-
-    <!-- 
-    container for the whole Mainpage
-    <div class="container-xl">
-        This will be the heading
-        <div class="text-center">
-            <h3>Home</h3>
-        </div>
-
+            </div>
+        </main>
     -->
 
 
-    </div>
 
     <div id="certificates">
         <div class="text-center">
@@ -287,7 +383,6 @@
 
 
 
-    </div>
     </div>
 
     <!--This will be the links to social media-->
